# hw_6_new2

./: BaseData.h  CMakeLists.txt  Car.c  Car.h  Client.c  Client.h  Company.c  Company.h  Input_checker.c  Input_checker.h  Structures.h  Supplier.c  Supplier.h  System.c  System.h  main2.c  matam.c  matam.h
